Correct function markup

--- a/README.org
+++ b/README.org
@@ -329,12 +329,12 @@ way to do it.
 
 Perhaps you know some defaults you want for every kind of entry. When you
 are ready configure them see these variables and functions:
-- `org2blog/wp-default-categories`
-- `org2blog/wp-default-categories-subtree`
-- `org2blog/wp-buffer-template`
-- `org2blog/wp-buffer-format-function`
-- `org2blog/wp-default-title`
-- `org2blog/wp-default-title-subtree`
+- ~org2blog/wp-default-categories~
+- ~org2blog/wp-default-categories-subtree~
+- ~org2blog/wp-buffer-template~
+- ~org2blog/wp-buffer-format-function~
+- ~org2blog/wp-default-title~
+- ~org2blog/wp-default-title-subtree~
 
 With your configuration ready, start creating the post.
 
